# seekr

./: .env  .env.sample  .gitignore  Cargo.toml  README.md  api.clusters.http  docker-compose.yaml
protos/api/: cluster.proto
seekr-server/: Cargo.toml  build.rs
seekr-server/src/: config.rs  lib.rs  logger.rs  main.rs
seekr-server/src/http/: error.rs  mod.rs
seekr-server/src/http/endpoints/: clusters.rs  mod.rs
