[package]
name = "seekr-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
bincode = "1.3.3"
chrono = { version = "*", features = ["serde"] }
clap = { version = "4.5.20", features = ["env", "derive"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
fern = { version = "0.6.2", features = ["colored"] }
hyper = { version = "1.4.1", features = ["full"] }
log = "0.4.22"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sled = "0.34.7"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.3"
tower = { version = "0.5.1", features = ["timeout"] }
tower-http = { version = "0.6.1", features = ["trace"] }
uuid = { version = "1.10.0", features = ["serde", "v7"] }

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
